--- a/Task 2 - Landing Page/style.css
+++ b/Task 2 - Landing Page/style.css
@@ -1,374 +1,454 @@
-* {
-	padding: 0;
-	margin: 0;
-	box-sizing: border-box;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap');
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
 }
 
-body {
-	background-color: white;
-	color: black;
-	font-family: "Fira Sans", sans-serif;
-	background-color: white;
+body{
+    background-color: #252954;
 }
 
-nav {
-	width: 100%;
-	height: 80px;
-	display: flex;
-	justify-content: space-between;
-	padding: 20px 5%;
-	background-color: #8cc099;
+.main{
+    padding: 0 88px;
+    position: relative;
+    overflow-x: hidden;
+    background-color: #221f2f;
 }
 
-nav .heading {
-	font-size: 30px;
-	font-weight: 700;
-	color: white;
+.main::before{
+    content: "";
+    position: absolute;
+    width: 120px;
+    height: 120px;
+    left: 55%;
+    top: 20%;
+    background-color: #ed2ff0;
+    filter: blur(90px);
 }
 
-nav ul {
-	display: flex;
-	list-style: none;
+.main::after{
+    content: "";
+    position: absolute;
+    width: 120px;
+    height: 120px;
+    left: 80%;
+    top: 44%;
+    background-color: #22a8cd;
+    filter: blur(90px);
 }
 
-nav ul li {
-	padding: 8px 15px;
-	border-radius: 10px;
-	transition: 0.2s ease-in;
+.main .navbar{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 20px 0;
 }
 
-nav ul li a {
-	color: black;
-	font-size: 20px;
-	font-weight: 500;
-	text-decoration: none;
-	color: white;
+.navbar .toggler{
+    font-size: 2rem;
+    color: #c5c3c3;
+    background-color: transparent;
+    cursor: pointer;
+    border: none;
+    display: none;
 }
 
-nav ul li:hover {
-	background-color: green;
+.navbar .nav-btn{
+    cursor: pointer;
+    background-color: transparent;
+    border: none;
+    width: 90px;
+    height: 40px;
+    color: #ccc;
+    font-size: 12px;
 }
 
-nav ul li a:hover {
-	color: white;
+.navbar .nav-btn.selected{
+    border: 1px solid #ccc;
+    border-radius: 8px;
 }
 
-nav .sideMenuButton {
-	font-size: 30px;
-	font-weight: bolder;
-	cursor: pointer;
-	display: none;
+.navbar .logo{
+    background: linear-gradient(95deg, #7e22ce 3.2%, #3b82f6 99.5%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    font-weight: 700;
+    font-size: 32px;
 }
 
-/* responsive navbar css */
+.navbar .item{
+    font-size: 13px;
+    color: #ccc;
+    cursor: pointer;
+}
+
+.navbar .item.selected{
+    background: linear-gradient(95deg, #7e22ce 3.2%, #3b82f6 99.5%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    border-bottom: 1px solid #7e22ce;
+}
+
+.navbar .item:not(:last-child){
+    margin-right: 20px;
+}
+
+.navbar .nav-buttons.active{
+    transition: all 0.3s ease;
+    opacity: 1;
+}
+
+.main .top-container{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 10rem;
+}
+
+.top-container .info-box{
+    max-width: 50%;
+    animation: toRight 0.8s;
+}
+
+.top-container .header{
+    margin: 0;
+    color: #fff;
+    font-size: 2.4rem;
+    font-weight: 600;
+    line-height: 55px;
+}
+
+.top-container .info-text{
+    margin: 20px 0 32px;
+    color: #fff;
+    font-size: 16px;
+    line-height: 20px;
+    letter-spacing: 0.5px;
+}
+
+.top-container .info-buttons{
+    display: flex;
+}
+
+.top-container .info-btn{
+    cursor: pointer;
+    padding: 8px 38px;
+    border-radius: 16px;
+    font-weight: 500;
+    font-size: 13px;
+    letter-spacing: -1px;
+    color: #fff;
+}
+
+.top-container .info-btn.nav-btn{
+    margin-left: 20px;
+    background-color: transparent;
+    border: 1px solid #fff;
+}
+
+.top-container .info-btn.selected{
+    border: none;
+    background: linear-gradient(95deg, #7e22ce 3.2%, #3b82f6 99.5%);
+}
+
+.top-container .nft-box{
+    padding: 16px;
+    border: 1px solid #000;
+    background: linear-gradient(170deg, rgba(52, 93, 129, 0.08) 1.85%, rgba(57, 46, 75, 0.08) 98%);
+    border-radius: 2rem;
+    animation: toLeft 0.8s;
+}
+
+.top-container .nft-pic{
+    object-fit: cover;
+    width: 300px;
+    height: 300px;
+    border-radius: 1.6rem;
+}
+
+.top-container .nft-box .nft-content{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    margin-top: 10px;
+}
+
+.top-container .nft-box .info, .top-container .nft-box .likes{
+    display: flex;
+    align-items: center;
+    color: #fff;
+    font-weight: 600;
+    font-size: 12px;
+}
+
+.top-container .nft-box .info-img{
+    object-fit: cover;
+    flex-shrink: 0;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    margin-right: 10px;
+}
+
+.top-container .nft-box .likes .icon-box{
+    display: flex;
+    align-items: center;
+    font-size: 15px;
+}
+
+.top-container .nft-box .likes .icon-box .bx{
+    font-size: 30px;
+    margin-right: 8px;
+}
+
+.get-started{
+    margin-top: 10rem;
+    display: flex;
+    flex-direction: column;
+}
+
+.get-started .header{
+    align-self: center;
+    color: #fff;
+    font-weight: 500;
+    font-size: 40px;
+    line-height: 72px;
+}
+
+.get-started .info-text{
+    align-self: center;
+    color: #ccc;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 36px;
+    letter-spacing: 0.5px;
+}
+
+.get-started .items-box{
+    padding: 60px 80px;
+    position: relative;
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    grid-column-gap: 25px;
+    grid-row-gap: 50px;
+    justify-content: space-around;
+}
+
+.get-started .items-box:before{
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 120px;
+    top: 80px;
+    background: linear-gradient(95deg, #7e22ce 3.2%, #3b82f6 99.5%);
+    filter: blur(140px);
+}
+
+.get-started .items-box .item-container p{
+    width: 100px;
+    margin-top: 12px;
+    text-align: center;
+    font-size: 12px;
+    color: #fff;
+}
+
+.get-started .items-box .item-container .item{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100px;
+    height: 100px;
+    border: 5px solid rgba(255, 255, 255, 0.3);
+    border-radius: 2.6rem;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    background: rgba(255, 255, 255, 0.2);
+    backdrop-filter: blur(90px);
+}
+
+.get-started .items-box .item-container .item .bx{
+    font-size: 38px;
+    color: #eee;
+}
+
+.main .footer{
+    margin: 50px 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.main .copyright{
+    padding-bottom: 25px;
+    border-top: 1px solid #ccc;
+}
+
+.main .footer .footer-header{
+    max-width: 50%;
+    font-weight: 500;
+    font-size: 30px;
+    line-height: 40px;
+    color: #fff;
+}
+
+.main .footer .footer-links{
+    display: flex;
+}
+
+.main .footer .footer-links .link{
+    margin-left: 70px;
+}
+
+.main .footer .footer-links .link h5{
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 40px;
+    color: #fff;
+}
+
+.main .footer .footer-links .link p{
+    font-size: 12px;
+    line-height: 18px;
+    letter-spacing: 0.05em;
+    color: #ccc;
+}
+
+.copyright p{
+    font-size: 12px;
+    line-height: 36px;
+    color: #afafaf;
+}
+
+@media screen and (max-width: 1040px) {
+    .top-container{
+        flex-direction: column;
+    }
+
+    .top-container .info-box{
+        max-width: none;
+        margin: 60px 0;
+    }
+
+    .top-container .nft-box{
+        display: none;
+    }
+    
+    .main .footer{
+        flex-direction: column;
+    }
+
+    .main .footer .footer-header{
+        max-width: 80%;
+        margin-bottom: 30px;
+        text-align: center;
+    }
+
+    .main .footer .footer-links .link:first-child{
+        margin: 0;
+    }
+}
+
+@media screen and (max-width: 925px) {
+    .navbar .nav-links{
+        display: none;
+    }
+
+    .navbar .nav-buttons{
+        opacity: 0;
+    }
+
+    .navbar .toggler{
+        display: flex !important;
+        align-items: center;
+    }
+
+    .get-started .info-text{
+        text-align: center;
+    }
+
+    .get-started .items-box{
+        display: grid;
+        grid-template-columns: auto auto;
+        justify-content: space-evenly;
+        padding: 50px 0;
+    }
+
+    .get-started .items-box:before{
+        height: 200px;
+        top: 90px;
+        filter: blur(120px);
+    }
+}
+
+@media screen and (max-width: 700px) {
+    .top-container{
+        margin-top: 4rem !important;
+    }
+
+    .top-container .info-box{
+        max-height: none;
+        max-width: none;
+        margin-bottom: 4rem;
+    }
+
+    .top-container .nft-box{
+        display: block;
+        max-width: none;
+        max-height: none;
+    }
+}
+
 @media screen and (max-width: 600px) {
-	nav .sideMenuButton {
-		display: flex;
-	}
+    .main{
+        padding: 0 40px;
+    }
 
-	nav .navbar {
-		display: none;
-	}
+    .footer .footer-header{
+        font-size: 20px;
+        line-height: 30px;
+        max-width: 100%;
+        margin-bottom: 30px;
+        text-align: center;
+    }
 
-	.sideNavigationBar {
-		display: block !important;
-	}
+    .footer .footer-links{
+        justify-content: space-between;
+        width: 100%;
+    }
+
+    .footer .footer-links .link{
+        margin-left: 20px;
+    }
+
+    .footer .footer-links .link h5{
+        font-size: 15px;
+        line-height: 35px;
+    }
+
+    .footer .footer-links .link p{
+        font-size: 11px;
+        line-height: 18px;
+    }
 }
 
-.sideNavigationBar {
-	height: 100%;
-	position: fixed;
-	top: 0;
-	right: 0%;
-	background-color: green;
-	overflow-x: hidden;
-	transition: 0.3s ease-in;
-	padding-top: 60px;
-	display: none;
+@keyframes toRight{
+    from{
+        transform: translateX(-700px);
+    }
+    to{
+        transform: translateX(0px);
+    }
 }
 
-.sideNavigationBar a {
-	padding: 8px 8px 8px 40px;
-	display: block;
-	font-size: 25px;
-	font-weight: 500;
-	color: #d1d1d1;
-	transition: 0.3s;
-	text-decoration: none;
-}
-
-.sideNavigationBar a button {
-	padding: 10px 20px;
-	border-radius: 10px;
-	color: green;
-	font-size: 16px;
-	border-style: none;
-	font-weight: 700;
-}
-
-.sideNavigationBar a:hover {
-	color: white;
-}
-
-.sideNavigationBar .closeButton {
-	position: absolute;
-	top: 10px;
-	right: 25px;
-	font-size: 20px;
-	margin-left: 50px;
-}
-
-.line {
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	margin: 2% 5%;
-}
-
-.line .side1 {
-	padding-right: 50px;
-}
-
-.side1 h1 {
-	font-size: 60px;
-	margin-bottom: 10px;
-	color: green;
-}
-
-.side1 button {
-	width: 200px;
-	padding: 12px 20px;
-	border-radius: 20px;
-	border-style: none;
-	color: black;
-	font-size: 17px;
-	font-weight: 600;
-}
-
-a {
-	text-decoration: none;
-	color: black;
-}
-
-/* Header content responsive */
-@media screen and (max-width: 980px) {
-	.side2 img {
-		width: 350px;
-	}
-
-	.side1 h1 {
-		font-size: 40px;
-	}
-
-	.side1 p {
-		font-size: 17px;
-	}
-
-	.line {
-		margin-top: 80px;
-	}
-}
-
-@media screen and (max-width: 600px) {
-	.side1 h1 {
-		font-size: 35px;
-	}
-
-	.line {
-		flex-direction: column;
-	}
-
-	.line .side1 {
-		padding: 30px;
-	}
-}
-
-/* section */
-
-section .topic a {
-	font-size: 25px;
-	font-weight: 500;
-	margin-bottom: 10px;
-}
-
-.about .boxes {
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: space-between;
-}
-
-.about .boxes .box {
-	margin: 10px 20px;
-	max-width: calc(100% / 3 - 50px);
-	text-align: center;
-	border-radius: 12px;
-	padding: 30px 10px;
-	box-shadow: 0 5px 10px rgba(0, 0, 0, 0.12);
-	cursor: default;
-}
-
-/* Contact Page */
-
-.contact {
-	padding: 20px;
-}
-
-.contact .content {
-	margin: 0 auto;
-	padding: 30px 0;
-}
-
-.content .title {
-	width: 80%;
-	text-align: center;
-	font-weight: bolder;
-	font-size: 40px;
-}
-
-.title {
-	margin-bottom: 30px;
-	margin-left: 80px;
-}
-
-.contactMenu {
-	display: flex;
-	justify-content: space-evenly;
-}
-
-.input2 {
-	margin-top: 10;
-}
-
-.label1 {
-	font-size: 18px;
-	margin-top: 8px;
-	margin-bottom: 8px;
-	font-weight: bolder;
-}
-
-.contactMenu .input1 input {
-	border-radius: 13px;
-	padding: 6px;
-}
-
-.input2 input {
-	border-color: rgb(252, 244, 244);
-	width: 400px;
-}
-
-.button {
-	margin-top: 12px;
-	margin-left: 5px;
-}
-
-.button button {
-	width: 162px;
-	height: 35px;
-	border-radius: 12px;
-	border-color: transparent;
-}
-
-.button button:hover {
-	background-color: #8cc099;
-}
-
-button {
-	width: 162px;
-	height: 35px;
-	border-radius: 12px;
-	border-color: transparent;
-}
-
-button:hover {
-	background-color: #8cc099;
-}
-
-.rightside1 {
-	display: flex;
-	flex-direction: column;
-	margin-left: 300px;
-}
-
-.title1 {
-	font-size: 18px;
-	margin-top: 8px;
-	margin-bottom: 5px;
-	font-weight: bolder;
-}
-
-.content1 {
-	width: 450px;
-	margin-top: 2px;
-	color: grey;
-}
-
-/* Footer */
-footer {
-	background: var(--primary-color);
-	padding: 15px 0;
-	text-align: center;
-	font-family: "Poppins", sans-serif;
-}
-
-footer .footer span {
-	font-size: 17px;
-	font-weight: 400;
-	color: var(--white-color);
-}
-
-footer .footer span a {
-	font-weight: 500;
-	color: var(--white-color);
-}
-
-footer .footer span a:hover {
-	text-decoration: underline;
-}
-
-@media screen and (max-width: 1060px) {
-	.contactMenu {
-		flex-direction: column;
-		align-items: center;
-	}
-
-	.rightside1 {
-		display: flex;
-		flex-direction: column;
-		margin-left: 0px;
-	}
-
-	.content1 {
-		width: 100%;
-		margin-top: 2px;
-		color: grey;
-	}
-
-	.side2 img {
-		width: 95%;
-		height: 90%;
-	}
-}
-
-@media screen and (max-width: 600px) {
-	.side2 img {
-		width: 100%;
-	}
-
-	section .topic a {
-		font-size: 20px;
-	}
-
-	section .topic p {
-		font-size: 5px;
-	}
-
-	.about .boxes {
-		display: flex;
-		flex-direction: column;
-		align-items: center;
-	}
-
-	.about .boxes .box {
-		max-width: 70%;
-	}
+@keyframes toLeft{
+    from{
+        transform: translateX(550px);
+    }
+    to{
+        transform: translateX(0px);
+    }
 }
